--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block content %}
-    <h1 class="text-3xl text-green-800">Django + Tailwind CSS + Flowbite</h1>
+{% block about %}
+    {% include "about.html" %}
+{% endblock %}
+
+{% block projects %}
+    {% include "projects.html" %}
+{% endblock %}
+
+{% block experience %}
+    {% include "experience.html" %}
+{% endblock %}
+
+{% block contact %}
+    {% include "contact.html" %}
 {% endblock %}
