--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,7 +6,7 @@
 <section class="container mx-auto mt-24 mb-24 p-4 bg-black">
     <h2 id="projects" class="text-2xl font-semibold text-center underline mb-24 text-white pt-6">Projects</h2>
 
-    <div class="flex mb-12">
+    <div class="flex mb-24">
 
     <!-- Div left VVT -->
         <div class="flex flex-col justify-center w-1/2 p-4">
@@ -19,21 +19,20 @@
             </p>
             <p class="text-white mb-4 text-center">
                 Full stack web application made with Next.Js and Django Rest framework, styled using Tailwind css, CRUD database
-                using Postgres, and deployed with Netlify.
+                using Postgres, and deployed with Vercel.
             </p>
             <div class="flex justify-center">
                 <div class="flex justify-evenly bg-white rounded mb-4 w-3/4 h-auto">
-                    <i class="ci ci-python ci-4x bg-white rounded-lg p-2"></i>
-                    <i class="ci ci-nextjs ci-4x bg-white rounded-lg p-2"></i>
-                    <i class="ci ci-django ci-4x bg-white rounded-lg p-2"></i>
-                    <i class="ci ci-tailwind ci-4x bg-white rounded-lg p-2"></i>
-                    <i class="ci ci-postgres ci-4x bg-white rounded-lg p-2"></i>
-                    <i class="ci ci-netlify ci-4x bg-white rounded-lg p-2"></i>
+                    <img src="{% static 'images/python.png' %}" alt="Python logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/next.png' %}" alt="Nextjs logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/django.png' %}" alt="Django logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/tailwind.png' %}" alt="Tailwind logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/postgres.png' %}" alt="Postgres logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/vercel.svg' %}" alt="Vercel logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
                 </div>
             </div>
             <p class="text-white text-center">Check out the | <a href="https://vipers-venom-tavern-frontend.vercel.app/" class="text-blue-400 underline hover:text-blue-500">Website</a>
             | and | <a href="https://github.com/401-Slytherin" class="text-blue-400 underline hover:text-blue-500">GitHub</a> |</p>
-
         </div>
     <!-- Gallery right VVT -->
         <div id="custom-controls-gallery" class="relative w-1/2" data-carousel="slide">
@@ -80,7 +79,8 @@
     </div>
 
 
-    <div class="flex">
+    <div class="flex mb-24">
+
     <!-- Gallery left Text_Adventure -->
         <div id="custom-controls-gallery" class="relative w-1/2" data-carousel="slide">
             <!-- Carousel wrapper -->
@@ -138,12 +138,78 @@
             </p>
             <div class="flex justify-center">
                 <div class="flex justify-evenly bg-white rounded mb-4 w-3/4 h-auto">
-                    <i class="ci ci-python ci-4x bg-white rounded-lg p-2"></i>
-                    <i class="ci ci-css3 ci-4x bg-white rounded-lg p-2"></i>
+                    <img src="{% static 'images/python.png' %}" alt="Python logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/css.png' %}" alt="CSS# logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
                 </div>
             </div>
             <p class="text-white text-center">Check out the GitHub repo | <a href="https://github.com/The-Commanders/Text_Adventure" class="text-blue-400 underline hover:text-blue-500">Here</a> |</p>
         </div>
+    </div>
+
+
+    <div class="flex">
+
+    <!-- Div left Jadelyn port -->
+        <div class="flex flex-col justify-center w-1/2 p-4">
+            <h3 class="text-3xl font-bold text-white text-center mb-4">Jadelyn Drake Art Portfolio</h3>
+            <p class="text-white mb-4 text-center">
+                Jadelyn Drake is a student at UW (University of Washington) studying IVA who makes incredible pieces and posts them on her instagram. She had been thinking about
+                having a website made for a while, but did not know where to start. That's when me and my college Anthony Lopez jumped on the opportunity to make her a portfolio
+                that matches both her personality and pieces shown while presenting them all in a professional, simplistic, and robust user-friendly interface. This website shows
+                off all her most up-to-date art pieces and allows users to email her commission/connection request right from the website.
+            </p>
+            <p class="text-white mb-4 text-center">
+                Portfolio web application made collaboratively with Anthony Lopez using Django Rest Framework, styled using Tailwind css and deployed using Python Anywhere.
+            </p>
+            <div class="flex justify-center">
+                <div class="flex justify-evenly bg-white rounded mb-4 w-3/4 h-auto">
+                    <img src="{% static 'images/python.png' %}" alt="Python logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/django.png' %}" alt="Django logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/tailwind.png' %}" alt="Tailwind logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                </div>
+            </div>
+            <p class="text-white text-center">Check out the | <a href="https://jadelyn.pythonanywhere.com/" class="text-blue-400 underline hover:text-blue-500">Website</a>
+            | and | <a href="https://github.com/Brendeen/jadelyn-portfolio" class="text-blue-400 underline hover:text-blue-500">GitHub</a> |</p>
+
+        </div>
+    <!-- Gallery right Jadelyn port -->
+        <div id="custom-controls-gallery" class="relative w-1/2" data-carousel="slide">
+            <!-- Carousel wrapper -->
+            <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                <!-- Item 1 -->
+                <div class="hidden duration-1000 ease-in-out" data-carousel-item data-carousel-time="7000">
+                    <img src="{% static 'images/jade1.png' %}" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="text adventure screenshot 1">
+                </div>
+                <!-- Item 2 -->
+                <div class="hidden duration-1000 ease-in-out" data-carousel-item data-carousel-time="7000">
+                    <img src="{% static 'images/jade2.png' %}" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="text adventure screenshot 2">
+                </div>
+                <!-- Item 3 -->
+                <div class="hidden duration-1000 ease-in-out" data-carousel-item data-carousel-time="7000">
+                    <img src="{% static 'images/jade3.png' %}" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="text adventure screenshot 3">
+                </div>
+            </div>
+            <!-- Buttons -->
+            <div class="flex justify-center items-center pt-4">
+                <button type="button" class="flex justify-center items-center mr-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
+                    <span class="text-gray-400 hover:text-gray-900 group-focus:text-gray-900">
+                        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+                        </svg>
+                        <span class="sr-only">Previous</span>
+                    </span>
+                </button>
+                <button type="button" class="flex justify-center items-center h-full cursor-pointer group focus:outline-none" data-carousel-next>
+                    <span class="text-gray-400 hover:text-gray-900 group-focus:text-gray-900">
+                        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                        </svg>
+                        <span class="sr-only">Next</span>
+                    </span>
+                </button>
+            </div>
+        </div>
+
     </div>
 
 </section>
