--- a/templates/projects.html
+++ b/templates/projects.html
@@ -166,6 +166,7 @@
                     <img src="{% static 'images/python.png' %}" alt="Python logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
                     <img src="{% static 'images/django.png' %}" alt="Django logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
                     <img src="{% static 'images/tailwind.png' %}" alt="Tailwind logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
+                    <img src="{% static 'images/css.png' %}" alt="CSS3 logo" class="w-16 h-16 mx-auto bg-white rounded-lg p-2">
                 </div>
             </div>
             <p class="text-white text-center">Check out the | <a href="https://jadelyn.pythonanywhere.com/" class="text-blue-400 underline hover:text-blue-500">Website</a>
